syntax = "proto3";

option go_package = "/ServiceProductionCalendar/gRPC/proto";

service ServiceProductionCalendar {
  rpc GetAllHoliday (GetAllHolidayRequest) returns (GetAllHolidayResponse);
  rpc GetHoliday (GetHolidayRequest) returns (GetHolidayResponse);
  rpc HolidayCreate (AddHolidayRequest) returns (AddHolidayResponse);
  rpc UpdateHoliday (EditHolidayRequest) returns (EditHolidayResponse);
  rpc DeleteHoliday (DeleteHolidayRequest) returns (DeleteHolidayResponse);
}

message HolidayRequest {
  int32 id = 1;
  string name = 2;
  string data = 3;
}

message GetAllHolidayRequest {
  int32 id = 1;
  string name = 2;
  string data = 3;
}

message GetAllHolidayResponse {
  int32 id = 1;
  string name = 2;
  string data = 3;
}

message GetHolidayRequest {
  int32 id = 1;
  string name = 2;
  string data = 3;
}

message GetHolidayResponse {
  int32 id = 1;
  string name = 2;
  string data = 3;
}

message AddHolidayRequest {
  int32 id = 1;
  string name = 2;
  string data = 3;
}

message AddHolidayResponse {
  string name = 2;
  string data = 3;
}

message EditHolidayRequest {
  int32 id = 1;
  string name = 2;
  string data = 3;
}

message EditHolidayResponse {
  int32 id = 1;
  string name = 2;
  string data = 3;
}

message DeleteHolidayRequest {
  int32 id = 1;
  string name = 2;
}

message DeleteHolidayResponse {
  int32 id = 1;
  string name = 2;
}